# stl-splitter

./: CLAUDE.md  INTERACTIVE_SPLIT_PLAN.md  OPTIMIZATION_PLAN.md  README.md  pyproject.toml  scratch_b64.txt  standing_figure.stl
.claude/: launch.json  settings.local.json
stlsplit/: autofit.py  cli.py  connectors.py  cutting.py  export.py  geometry.py  hollow.py  pipeline.py  progress.py  sessions.py  web.py
stlsplit/static/css/: app.css
stlsplit/static/js/: api.js  config.js  interactiveApi.js  interactiveState.js  main.js  presets.js  state.js  viewer.js
stlsplit/static/js/components/: AdvancedSection.js  App.js  AxisPlaneEditor.js  CollapsePanel.js  CollapsibleCard.js  ConnectorsSection.js  InputSection.js  InteractiveSplit.js  InteriorSection.js  MeshViewer.js  OutputSection.js  PieceCard.js  PieceGrid.js  PresetBar.js  ProgressBar.js  ResultModal.js  ScaleSection.js  SplitSection.js  TabNav.js
tests/: bench_baseline.txt  bench_split.py  box.stl  test_pipeline.py  test_session_endpoints.py  test_sessions.py  verify_graph_connectivity.py
